--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>로그인</title>
-        <link rel="stylesheet" href="/static/css/login/login.css" />
+        <link rel="stylesheet" href="/css/login/login.css" />
     </head>
     <body>
         <div id="root">
@@ -110,6 +110,6 @@
                 </div>
             </div>
         </div>
-        <script src="../../static/js/login/login.js"></script>
+        <script src="/js/login/login.js"></script>
     </body>
 </html>
