--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -89,7 +89,8 @@
                                     <p>카카오톡 로그인 하기</p>
                                     <ul>
                                         <li class="social-kakao">
-                                            <a href="">카카오톡 로그인</a>
+                                            <a href="https://kauth.kakao.com/oauth/authorize?client_id=ebd5fc7a83ce64e3914000e4b3ac6cc7&redirect_uri=http://localhost:10000/kakao/login&response_type=code">
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
