--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -37,11 +37,12 @@
                                 <ul>
                                     <a href="">
                                         <li class="social-kakao">
+                                            <a href="https://kauth.kakao.com/oauth/authorize?client_id=ebd5fc7a83ce64e3914000e4b3ac6cc7&redirect_uri=http://localhost:10000/kakao/login&response_type=code">
+
                                             <img
-                                                    src="https://accounts-front.stunning.kr/assets/img/login/ico-kakao.png"
+                                                    src="/images/kakao_login_medium_wide.png"
                                             />
-                                            카카오톡으로 3초만에
-                                            가입하기
+                                            </a>
                                         </li>
                                     </a>
                                 </ul>
