--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>메인</title>
-        <link rel="stylesheet" href="/static/css/main/main.css" />
-        <link rel="stylesheet" href="/static/css/main/basic-header.css" />
-        <link rel="stylesheet" href="/static/css/rank/rank.css" />
+        <link rel="stylesheet" href="/css/main/main.css" />
+        <link rel="stylesheet" href="/css/main/basic-header.css" />
+        <link rel="stylesheet" href="/css/rank/rank.css" />
     </head>
     <body>
         <div id="root">
@@ -122,7 +122,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner2.jpg"
+                                                                        src="/images/banner2.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -189,7 +189,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner1.jpg"
+                                                                        src="/images/banner1.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -255,7 +255,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner3.jpg"
+                                                                        src="/images/banner3.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -319,7 +319,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="lljcti hkaqym banner-web-image"
-                                                                        src="../../static/images/banner4.jpg"
+                                                                        src="/images/banner4.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -385,7 +385,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner5.jpg"
+                                                                        src="/images/banner5.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -454,7 +454,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner6.jpg"
+                                                                        src="/images/banner6.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -521,7 +521,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner7.jpg"
+                                                                        src="/images/banner7.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -587,7 +587,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner8.png"
+                                                                        src="/images/banner8.png"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -653,7 +653,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="../../static/images/banner9.jpg
+                                                                        src="/images/banner9.jpg
                                                                         "
                                                                     />
                                                                 </div>
@@ -2059,7 +2059,7 @@
                 </div>
             </div>
         </div>
-        <script src="/static/js/main/main.js"></script>
-        <script src="/static/js/rank/rank.js"></script>
+        <script src="/js/main/main.js"></script>
+        <script src="/js/rank/rank.js"></script>
     </body>
 </html>
