--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -72,7 +72,7 @@
                                         >
                                 <a
                                         class="btn-back-login-btn-back-login loud-back-login-btn"
-                                        href=""
+                                        href="/member/login"
                                 >로그인 하기</a
                                 >
                             </div>
