--- a/src/main/resources/templates/review/review-write.html
+++ b/src/main/resources/templates/review/review-write.html
@@ -6,7 +6,7 @@
         <title>이용 후기 작성</title>
         <link
             rel="stylesheet"
-            href="../../static/css/review/review-write.css"
+            href="/css/review/review-write.css"
         />
         <link
             rel="icon"
