--- a/src/main/resources/templates/member/email.html
+++ b/src/main/resources/templates/member/email.html
@@ -158,6 +158,7 @@
                                                 인증
                                             </button>
                                         </div>
+                                        <img class="loading-img" src="/images/loading-img.gif">
                                         <span
                                             class="desc-span successmsg-msg"
                                             style="display: none"
@@ -290,10 +291,7 @@
                                         <button class="register-btn-previous">
                                             이전
                                         </button>
-                                        <button
-                                            type="submit"
-                                            class="register-btn-complete false"
-                                        >
+                                        <button type="submit" class="register-btn-complete false">
                                             완료
                                         </button>
                                     </div>
