--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -392,3 +392,17 @@ input[type="text"] {
     font-family: inherit; 
     padding-left: 10px; 
 }
+#real-login{
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: -.5px;
+    border-radius: 4px;
+    color: #fff;
+    background: #0d0d0d;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 10px;
+}
