--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/css/rank/rank.css" />
     </head>
     <body>
+    <h1 th:text="'안녕하세요, ' + ${member.memberName} + '님!'"></h1>
         <div id="root">
             <div id="app" class="bfedap app">
                 <div class="wrap">
