--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -64,7 +64,7 @@
                                             id="login-btn"
                                             class="classic-black-btn login-form-popask-btn false"
                                         >
-                                            <button type="submit">로그인</button>
+                                            <button type="submit" id="real-login">로그인</button>
                                         </div>
                                         <div
                                             class="login-keep-box login-form-others loud"
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="login-join-area">
                                     <div class="login-join-box">
-                                        <a href="">
+                                        <a href="/member/signup">
                                             <span
                                                 >아직 온정 회원이
                                                 아니세요?</span
