--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -10,6 +10,7 @@
     </head>
     <body>
     <h1 th:text="'안녕하세요, ' + ${member.memberName} + '님!'"></h1>
+    <h1 th:text="'안녕하세요, ' + ${member.kakaoEmail} + '님!'"></h1>
         <div id="root">
             <div id="app" class="bfedap app">
                 <div class="wrap">
