--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -74,12 +74,10 @@
                                                 id="login-keep"
                                                 name="login-keep"
                                             />
-                                            <label for="login-keep"
-                                                >로그인 유지</label
-                                            >
+
                                             <a
                                                 class="find-account login-form-find-account loud"
-                                                href=""
+                                                href="/member/password"
                                                 >비밀번호 찾기</a
                                             >
                                         </div>
