--- a/src/main/resources/templates/member/password.html
+++ b/src/main/resources/templates/member/password.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>비밀번호 찾기</title>
-        <link rel="stylesheet" href="/static/css/login/password.css" />
+        <link rel="stylesheet" href="/css/login/password.css" />
     </head>
     <body>
         <div id="root">
@@ -75,6 +75,6 @@
                 </div>
             </div>
         </div>
-        <script src="/static/js/login/password.js"></script>
+        <script src="/js/login/password.js"></script>
     </body>
 </html>
