--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -10,8 +10,9 @@
     </head>
     <body>
     <h1 th:text="'안녕하세요, ' + ${member.memberName} + '님!'"></h1>
-    <h1 th:text="'안녕하세요, ' + ${member.kakaoEmail} + '님!'"></h1>
-        <div id="root">
+    <p th:text="'로그인 유형: ' + ${loginType}"></p>
+
+    <div id="root">
             <div id="app" class="bfedap app">
                 <div class="wrap">
                     <div class="eucbbu content">
