--- a/src/main/resources/templates/member/email.html
+++ b/src/main/resources/templates/member/email.html
@@ -266,6 +266,7 @@
                                                 type="checkbox"
                                                 id="chk-agree"
                                                 name="chk-agree"
+                                                checked
                                             />
                                             <label for="chk-agree"
                                                 >온정 가입 약관에 모두
