donation dao working

--- a/src/main/resources/templates/review/review-list.html
+++ b/src/main/resources/templates/review/review-list.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>이용 후기</title>
-        <link rel="stylesheet" href="../../static/css/review/review.css" />
+        <link rel="stylesheet" href="/css/review/review.css" />
         <link
             rel="icon"
             href="https://cdn-dantats.stunning.kr/static/feature/loudFavicon/loud-favicon-32-new.png"
@@ -170,5 +170,5 @@
             </main>
         </div>
     </body>
-    <script src="../../static/js/review/review.js"></script>
+    <script src="/js/review/review.js"></script>
 </html>
