--- a/src/main/resources/templates/review/review-update.html
+++ b/src/main/resources/templates/review/review-update.html
@@ -6,7 +6,7 @@
         <title>이용 후기 수정</title>
         <link
             rel="stylesheet"
-            href="../../static/css/review/review-update.css"
+            href="/css/review/review-update.css"
         />
         <link
             rel="icon"
@@ -245,5 +245,5 @@ ex) 경로식당 배식 봉사"
             </div>
         </div>
     </body>
-    <script src="../../static/js/review/review-update.js"></script>
+    <script src="/js/review/review-update.js"></script>
 </html>
