비밀번호 찾기 메일 전송 후 메일에서 이동까지 작업

--- a/src/main/resources/templates/member/password.html
+++ b/src/main/resources/templates/member/password.html
@@ -52,10 +52,7 @@
                                                     입니다.</span
                                                 >
                                             </div>
-                                            <button
-                                                type="button"
-                                                class="classic-black-btn password-btn-complete false"
-                                            >
+                                            <button type="button" id="send-email-btn" class="password-btn-complete">
                                                 전송하기
                                             </button>
                                         </div>
@@ -66,7 +63,7 @@
                                 <span>비밀번호가 생각나셨나요?</span>
                                 <a
                                     class="btn-back-login-btn-back-login loud-back-login-btn"
-                                    href=""
+                                    href="/member/login"
                                     >로그인하기</a
                                 >
                             </div>
