--- a/src/main/resources/templates/help/help-notification-list.html
+++ b/src/main/resources/templates/help/help-notification-list.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="../../static/css/help/help-notification-list.css"
+            href="/css/help/help-notification-list.css"
         />
         <title>공지사항 목록</title>
     </head>
@@ -103,5 +103,5 @@
         const posts = [[${posts}]];
         const pagination = [[${pagination}]];
     </script>
-    <script src="../../static/js/help/help-notification-list.js"></script>
+    <script src="/js/help/help-notification-list.js"></script>
 </html>
