--- a/src/main/resources/templates/help/help-notification-inquiry.html
+++ b/src/main/resources/templates/help/help-notification-inquiry.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="../../static/css/help/help-notification-inquiry.css"
+            href="/css/help/help-notification-inquiry.css"
         />
         <title>공지사항 조회</title>
     </head>
@@ -193,5 +193,5 @@
             </div>
         </main>
     </body>
-    <script src="../../static/js/help/help-notification-inquiry.js"></script>
+    <script src="/js/help/help-notification-inquiry.js"></script>
 </html>
